--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@ html, body {
 }
 
 /*HEADER SECTION*/
-.header1 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Source/images/portfolio2.jpg);
+.header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/portfolio2.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -130,8 +130,8 @@ h2::after {
 }
 
 /*Second html page formatting*/
-.header2 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Source/images/portfolio1.jpg);
+.header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/portfolio1.jpg);
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -221,8 +221,8 @@ h2::after {
 }
 
 /*Third page portfolio formatting*/
-.header3 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Source/images/portfolio3.jpg);
+.header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/portfolio3.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -230,10 +230,10 @@ h2::after {
 }
 
 .section-3 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Source/images/skills.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/skills.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 100vh;
   background-attachment: fixed;
 }
 
@@ -294,7 +294,7 @@ h2::after {
 }
 
 .section-4 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Source/images/experience.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/experience.jpg);
   background-size: cover;
   height: 200vh;
   background-position: center;
@@ -311,6 +311,31 @@ h2::after {
   text-align: center;
 }
 
+.row {
+  width: 100%;
+}
+
+.row::after {
+  clear: both;
+  content: '';
+}
+
+.row .col-4 {
+  padding-right: 1%;
+  padding-left: 1%;
+  float: left;
+  width: 33%;
+  background: red;
+}
+
+.row .col-4:first-child {
+  padding-left: 2%;
+}
+
+.row .col-4:last-child {
+  padding-right: 2%;
+}
+
 .mobile-nav-icon {
   float: right;
   cursor: pointer;
@@ -321,4 +346,213 @@ h2::after {
   font-size: 200%;
   color: #fff;
   padding-top: 500%;
+}
+
+/*----------------------------*/
+/*from 1024px to 1200px*/
+@media only screen and (max-width: 1200px) {
+  .header {
+    width: 100%;
+    min-height: 130vh;
+    padding-bottom: 55%;
+  }
+
+  .row {
+    padding: 0 5%;
+  }
+
+  .logo-main {
+    min-height: 95px;
+    margin-left: 20px;
+  }
+
+  .title-info {
+    font-size: 85%;
+  }
+
+  .ruse-img {
+    width: 95%;
+  }
+
+  .varna-img {
+    width: 95%;
+  }
+
+  .section-3 {
+    padding-bottom: 70%;
+  }
+}
+
+/*from 768 to 1023px*/
+@media only screen and (max-width: 1023px) {
+  body {
+    font-size: 18px;
+  }
+
+  .title-info {
+    font-size: 90%;
+  }
+
+  .main-nav {
+    font-size: 16px;
+    padding-top: 15px;
+  }
+
+  .header {
+    padding-left: 8%;
+    font-size: 90%;
+    padding-bottom: 50%;
+  }
+
+  .logo-main {
+    min-height: 70px;
+  }
+
+  .owner-footer {
+    padding-right: 7%;
+  }
+
+  .footer-number {
+    padding-right: 5%;
+  }
+
+  .ion-social-twitter {
+    font-size: 20px;
+    padding-left: 10px;
+  }
+
+  .ion-social-facebook {
+    font-size: 20px;
+  }
+
+  .ion-social-googleplus {
+    font-size: 20px;
+  }
+
+  .section-3 {
+    font-size: 75%;
+    padding-bottom: 10%;
+  }
+
+  .section-4 {
+    font-size: 75%;
+  }
+
+  .owner {
+    padding-right: 5%;
+  }
+
+  .social-links {
+    font-size: 15px;
+    padding-left: 10px;
+  }
+}
+
+/*from 481 to 767px*/
+@media only screen and (max-width: 767px) {
+  .header {
+    min-height: 150vh;
+    font-size: 75%;
+    padding-right: 3%;
+  }
+
+  .row {
+    padding: 0 5%;
+  }
+
+  .logo-main {
+    min-height: 75px;
+    width: auto;
+  }
+
+  .title-info {
+    font-size: 75%;
+  }
+
+  body {
+    font-size: 18px;
+  }
+
+  .mobile-nav-icon {
+    display: inline-block;
+    position: relative;
+    z-index: 9999;
+  }
+
+  .main-nav {
+    float: none;
+    position: absolute;
+    z-index: 8888;
+    width: 100%;
+    min-height: 100vh;
+    margin: 0;
+    margin-left: -2%;
+    background-color: rgba(62, 136, 139, 0.92);
+    text-align: center;
+    padding-top: 20vh;
+  }
+
+  .main-nav li {
+    display: block;
+    margin-right: 40%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 10px 0;
+    font-size: 100%;
+  }
+
+  .col {
+    width: 100%;
+    margin: 0% 0 4% 0%;
+  }
+
+  .ruse-img {
+    width: 85%;
+  }
+
+  .varna-img {
+    width: 85%;
+  }
+
+  .section-3 {
+    font-size: 55%;
+    padding-bottom: 110%;
+  }
+
+  .skill-format .skills {
+    padding: 0% 0% 0% 0%;
+  }
+
+  .section-4 {
+    padding-bottom: 190%;
+    font-size: 12px;
+  }
+
+  .footer-nav {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .header {
+    font-size: 70%;
+  }
+
+  .personal__info {
+    font-size: 70%;
+  }
+
+  .section-3 {
+    font-size: 70%;
+  }
+
+  .section-4 {
+    font-size: 72%;
+  }
 }
