--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,63 @@ h2::after {
   padding-top: 500%;
 }
 
+/*=============================================================
+FORMATTING THE FORM*/
+.form_format {
+  margin: 0, auto;
+  text-align: center;
+  background-color: #C3BCB1;
+  border-radius: 10px;
+  max-width: 100%;
+}
+
+li {
+  list-style: none;
+  margin-top: 15px;
+  border-bottom: 1px dashed #000;
+  padding-bottom: 10px;
+}
+
+.body_form {
+  background-color: #fff;
+  background-size: cover;
+}
+
+.list {
+  background-color: #fff;
+}
+
+.todo_html {
+  background-color: #fff;
+}
+
+.input {
+  margin-top: 20px;
+  border: 0;
+  padding: 5px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  outline: none;
+}
+
+.click_button {
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.delete {
+  display: inline-block;
+  background-color: red;
+  border 1px solid black;
+  width: 2.5%;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+/*=============================================================*/
 /*----------------------------*/
 /*from 1024px to 1200px*/
 @media only screen and (max-width: 1200px) {
